# pysigma-backend-arroyo

./: README.md
pySigma-backend-arroyosql/: README.md  pyproject.toml
pySigma-backend-arroyosql/.github/workflows/: test.yml
pySigma-backend-arroyosql/sigma/backends/arroyosql/: __init__.py  arroyosql.py
pySigma-backend-arroyosql/sigma/pipelines/arroyosql/: __init__.py  arroyosql.py
pySigma-backend-arroyosql/tests/: test_backend_arroyosql.py  test_pipelines_arroyosql.py
